[package]
name = "poem-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "poem-backend"
path = "src/main.rs"

[dependencies]
actix-web = "4.0"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
